fix alignment issue

--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -74,7 +74,7 @@ table.summary-table {
   }
 
   th.group-selector {
-    padding-top: 5px;
+    padding-top: 6px;
     padding-left: 0;
   }
 
